tests/errors/multiple_errors/robots/interaction/getdigsensor_setmotor.c
void f(int i, int a[])
{
    printid(a);
}

#define num2 -2
#define num222 -222


void main()
{
    f(1, {num2, num222});

    while (GETDIGSENSOR(33, {1, num2, 3}) < 10)
        SETMOTOR(num2, 20);
}
    
